# garrulous-gargoyles

./: .gitignore  .pylintrc  Makefile  README.md  client.py  pyproject.toml  tox.ini
client/: __init__.py  event_manager.py  logging.py  structures.py  types.py  utils.py
client/entities/: __init__.py  entity.py  spritesheet.py
client/game/: __init__.py  entities.py  event_handlers.py  game.py  objects.py
game/: __init__.py  config.py  event_manager.py  logging.py  run.py  structures.py  utils.py
game/config/: __init__.py
game/entities/: __init__.py  entity.py  spritesheet.py
game/game/: __init__.py  objects.py
game/utils/: __init__.py
server/: __init__.py  __main__.py  action.py  event.py  event_handlers.py  event_manager.py  lobby.py  logging.py  packet.py  player.py  serve.py
testing/: __main__.py  client.py  events.py  objects.py  server.py
